force td use width auto. fixed layout issues

--- a/ProtonMail/ProtonMail/Resource/editor.css
+++ b/ProtonMail/ProtonMail/Resource/editor.css
@@ -187,6 +187,7 @@ img {
 
 td {
     max-width: 100%;
+    width: auto !important;
 }
 
 table {
